--- a/pane.html
+++ b/pane.html
@@ -291,7 +291,7 @@
                 <div class="product-name">Pasta dura a forma di X</div>
             </li> 
             <li class="product-card">
-                <img src="images/fotoPane/Biova.png" alt="Biova" class="product-image">
+                <img src="images/fotoPane/Biova.jpeg" alt="Biova" class="product-image">
                 <div class="product-name">Biova</div>
             </li>
 
